--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -6,11 +6,14 @@
                     before:w-[2.3rem] before:h-[38px]`}>
                     My <span class="text-primary">Story</span> 
         </h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore ad, natus vel, obcaecati molestias accusantium, necessitatibus officia quae dicta debitis quaerat impedit maiores! Possimus enim aut unde porro, recusandae cumque?</p>
-        <div class="mt-[2rem] flex gap-[2rem]">
+        <p>As I always was fascinated by technology, Web engineers picked my mind
+            with the new fancy and carefully crafted solutions to certain problem.
+            And here I am going their path looking for a chance to do the same with
+            other curious and ambitious people like me.</p>
+        <!-- <div class="mt-[2rem] flex gap-[2rem]">
             <button class="text-primary border-primary border-[1px] py-[5px] px-[6px] ">Get in Touch</button>
             <button class="text-primary border-primary border-[1px] py-[5px] px-[6px] ">Download resume</button>
-        </div>
+        </div> -->
     </div>
     <div>
 
