--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -2,19 +2,23 @@
 import ColorSwitcherTitle from "./colorSwitcher.jsx";
 ---
 
-<section class='px-main pt-[4rem]'>
+<section class='px-main pt-[4rem] flex justify-between'>
   <div>
     <p class="text-primary uppercase text-xl tracking-wider">I'm segfaulty</p>
     <!-- an h1 title -->
     <ColorSwitcherTitle client:load title='A Web Engineer'/>
-    <p class="max-w-[35rem] leading-relaxed">Deleniti vel culpa molestias atque, nam ea amet libero ex sequi voluptas laudantium voluptate itaque veniam quia sit impedit dolorem ad quisquam!</p>
-    <ul aria-label="socialMedia">
+    <p class="max-w-[25rem] leading-relaxed">
+      I write sweat code for the web, with the help of  sweat technologies.
+    </p>
+    <ul aria-label="socialMedia" class="mt-3">
       <li><a href=""></a></li>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
     </ul>
-    <button>Get In Touch</button>
-    <button>Download Resume</button>
+    <div class="flex gap-7 mt-8">
+       <button class="text-primary border-primary border-b-2 py-[5px]">Get in Touch</button>
+       <button class="text-primary border-primary border-b-2 py-[5px]">Download resume</button>
+    </div>
   </div>
-  <div>personal pic</div>
+  <div class="border-2">personal pic</div>
 </section>
