enhancement: better styles, added icons, DRYed a litte bit

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,21 +1,24 @@
-<section class='text-slate-50  pt-[6rem] px-main'>
+<section class="text-slate-50 pt-[6rem] px-main">
     <div>
-        <h2 class={`text-center text-2xl pb-[3rem] relative
+        <h2
+            class={`text-center capitalize text-2xl pb-[3rem] relative
                     before:absolute
                     before:border-b-2 before:border-b-primary
-                    before:w-[2.3rem] before:h-[38px]`}>
-                    My <span class="text-primary">Story</span> 
+                    before:w-[2.3rem] before:h-[38px]`}
+        >
+            My <span class="text-primary">Story</span>
         </h2>
-        <p>As I always was fascinated by technology, Web engineers picked my mind
-            with the new fancy and carefully crafted solutions to certain problem.
-            And here I am going their path looking for a chance to do the same with
-            other curious and ambitious people like me.</p>
+        <p class="max-w-2xl">
+            As I always was fascinated by technology, Web engineers picked my mind with
+            the new fancy and carefully crafted solutions to certain problem. And here I
+            am going their path looking for a chance to do the same with other curious and
+            ambitious people like me.
+        </p>
+
         <!-- <div class="mt-[2rem] flex gap-[2rem]">
             <button class="text-primary border-primary border-[1px] py-[5px] px-[6px] ">Get in Touch</button>
             <button class="text-primary border-primary border-[1px] py-[5px] px-[6px] ">Download resume</button>
         </div> -->
     </div>
-    <div>
-
-    </div>
+    <div></div>
 </section>
