--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import '../index.css'
+import '../index.css';
 
 import SharedLayout from '../components/sharedLayout.astro';
 import Hero from '../components/hero.astro';
@@ -10,20 +10,20 @@ import Contact from '../components/contact.astro';
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body class="text-white bg-gray-900">
-		<SharedLayout>
-			<Hero/>
-			<About/>
-			<Skills/>
-			<Portfolio/>
-			<Contact/>
-		</SharedLayout>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <title>Astro</title>
+    </head>
+    <body class="text-white bg-gray-900">
+        <SharedLayout>
+            <Hero />
+            <About />
+            <Skills />
+            <Portfolio />
+            <Contact />
+        </SharedLayout>
+    </body>
 </html>
