Feat: adding shaddow to hero text, resolve #1

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,7 +4,7 @@ import Icon from 'astro-icon';
 ---
 
 <section class='px-main pt-[4rem] flex justify-between'>
-  <div class="z-20 bg-gray-900/90">
+  <div class="z-20 bg-gradient-to-r from-gray-900 via-gray-900 to-transparent">
     <p class="text-primary capitalize uppercase text-xl tracking-wider">I'm astronaut</p>
     <!-- an h1 title -->
     <ColorSwitcherTitle client:load title='A Web Engineer'/>
@@ -18,7 +18,7 @@ import Icon from 'astro-icon';
     </ul>
     <div class="flex gap-7 mt-8">
        <button class="text-primary capitalize border-primary border-b-2 py-[5px]">Get in Touch</button>
-       <button class="text-primary capitalize border-primary border-b-2 py-[5px]">Download resume</button>
+       <button class="text-primary capitalize border-primary border-b-2 py-[5px] bg-gray-900/90">Download resume</button>
     </div>
   </div>
   <style>
