--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,15 +1,24 @@
 ---
-import ColorSwitcherTitle from "./colorSwitcher.jsx";
+import ColorSwitcherTitle from "./colorSwitcher";
 import Icon from 'astro-icon';
 ---
 
 <section class='px-main pt-[4rem] flex justify-between'>
-  <div class="z-20 bg-gradient-to-r from-gray-900 via-gray-900 to-transparent">
+  <!-- tailwind can not do this -->
+  <style>
+    .gradient-70{
+      background: linear-gradient(to right, rgb(17 24 39), rgb(17 24 39 / .95), rgb(17 24 39 / .9), rgb(17 24 39 / .85), transparent);
+    }
+  </style>
+  <div class="z-20 gradient-70">
     <p class="text-primary capitalize uppercase text-xl tracking-wider">I'm astronaut</p>
     <!-- an h1 title -->
     <ColorSwitcherTitle client:load title='A Web Engineer'/>
-    <p class="max-w-[25rem] leading-relaxed first-letter:uppercase">
-      I write sweat code for the web, with the help of  sweat technologies.
+    <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
+      I write sweat code for the web,
+    </p>
+    <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
+      With the help of  sweat technologies.
     </p>
     <ul aria-label="socialMedia" class="mt-3">
       <li><a href=""></a></li>
@@ -17,8 +26,8 @@ import Icon from 'astro-icon';
       <li><a href=""></a></li>
     </ul>
     <div class="flex gap-7 mt-8">
-       <button class="text-primary capitalize border-primary border-b-2 py-[5px]">Get in Touch</button>
-       <button class="text-primary capitalize border-primary border-b-2 py-[5px] bg-gray-900/90">Download resume</button>
+       <button class={`text-primary capitalize border-primary border-b-2 py-[5px]`}>Get in Touch</button>
+       <button class={`text-primary capitalize border-primary border-b-2 py-[5px]`}>Download resume</button>
     </div>
   </div>
   <style>
@@ -27,7 +36,7 @@ import Icon from 'astro-icon';
     }
   </style>
   <div class="w-[190px] absolute astro">
-    <Icon class='text-primary w-2xl' name='fa-solid:user-astronaut'/>
+    <Icon class='text-primary/50 w-2xl' name='fa-solid:user-astronaut'/>
     <!-- <Icon class='absolute z-20 w-2xl' name='mdi:fire-circle'/> -->
     <!-- <Icon class='absolute top-[-120px] left-[-30px] w-[20rem] text-primary' name='mdi:fire'/> -->
   </div>
