--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
 section{
   @apply max-w-[1200px] mx-auto
 }
+
+body::scrollbar,
+.scrollbar::scrollbar {
+    width: 10px;
+    background-color: rgb(00 130 0);
+}
+
+body::-webkit-scrollbar,
+.scrollbar::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb,
+.scrollbar::-webkit-scrollbar-thumb {
+    border-left: 2px solid black;
+    border-radius: 5px;
+    background-color: rgb(00 130 0);
+}
