--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Portfolio from '../components/portfolio.astro';
 import Contact from '../components/contact.astro';
 ---
 
-<html lang="en">
+<html style='scroll-behavior: smooth;' lang="en">
     <head>
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
