generic: few touches

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,4 +1,4 @@
-<section class="text-slate-50 pt-[6rem] px-main">
+<section id='about' class="text-slate-50 pt-[6rem] px-main">
     <div>
         <h2
             class={`text-center capitalize text-2xl pb-[3rem] relative
@@ -8,12 +8,17 @@
         >
             My <span class="text-primary">Story</span>
         </h2>
-        <p class="max-w-2xl">
+        <div aria-label='story text'></div>
+        <p class="max-w-xl mb-3">
             As I always was fascinated by technology, Web engineers picked my mind with
-            the new fancy and carefully crafted solutions to certain problem. And here I
-            am going their path looking for a chance to do the same with other curious and
-            ambitious people like me.
+            the new fancy and carefully crafted solutions to certain problem.
         </p>
+        <p class="max-w-xl">
+            And here I am going their path looking for a chance to do the same with other
+            curious and ambitious people like me.
+        </p>
+
+        <!-- I need a table here -->
 
         <!-- <div class="mt-[2rem] flex gap-[2rem]">
             <button class="text-primary border-primary border-[1px] py-[5px] px-[6px] ">Get in Touch</button>
