--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -1,4 +1,4 @@
-<section class="text-slate-50 pt-[6rem] px-main">
+<section id='contact' class="text-slate-50 pt-[6rem] px-main">
     <h2
         class={`text-center capitalize text-2xl pb-[3rem] relative
                     before:absolute
