--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import '../index.css';
 
-import SharedLayout from '../components/sharedLayout.astro';
+import SharedLayout from '../layouts/sharedLayout.astro';
 import Hero from '../components/hero.astro';
 import About from '../components/about.astro';
 import Skills from '../components/skills.astro';
