minor: few touches

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,4 +1,4 @@
-<section id='about' class="text-slate-50 pt-[6rem] px-main">
+<section id='about' class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <div>
         <h2
             class={`text-center capitalize text-2xl pb-[3rem] relative
