--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -1,4 +1,4 @@
-<section id='contact' class="text-slate-50 pt-[6rem] px-main">
+<section id='contact' class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl pb-[3rem] relative
                     before:absolute
@@ -7,4 +7,7 @@
     >
         Get <span class="text-primary">In Touch</span>
     </h2>
+    <form action="">
+        
+    </form>
 </section>
