--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -23,7 +23,7 @@ const skills = [
 ];
 ---
 
-<section id='skills' class="text-slate-50 pt-[6rem] px-main">
+<section id='skills' class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl pb-[3rem] relative
               before:absolute
