--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,43 +1,67 @@
 ---
-import ColorSwitcherTitle from "./colorSwitcher";
+import ColorSwitcherTitle from './colorSwitcher';
 import Icon from 'astro-icon';
 ---
 
-<section class='px-main pt-[4rem] flex justify-between'>
-  <!-- tailwind can not do this -->
-  <style>
-    .gradient-70{
-      background: linear-gradient(to right, rgb(17 24 39), rgb(17 24 39 / .95), rgb(17 24 39 / .9), rgb(17 24 39 / .85), transparent);
-    }
-  </style>
-  <div class="z-20 gradient-70">
-    <p class="text-primary capitalize uppercase text-xl tracking-wider">I'm astronaut</p>
-    <!-- an h1 title -->
-    <ColorSwitcherTitle client:load title='A Web Engineer'/>
-    <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
-      I write sweat code for the web,
-    </p>
-    <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
-      With the help of  sweat technologies.
-    </p>
-    <ul aria-label="socialMedia" class="mt-3">
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-    </ul>
-    <div class="flex gap-7 mt-8">
-       <button class={`text-primary capitalize border-primary border-b-2 py-[5px]`}>Get in Touch</button>
-       <button class={`text-primary capitalize border-primary border-b-2 py-[5px]`}>Download resume</button>
+<section id="home" class="relative px-main xs>:px-4 pt-[4rem] flex justify-between">
+    <!-- tailwind can not do this -->
+    <style>
+        .gradient-70 {
+            background: linear-gradient(
+                to right,
+                rgb(17 24 39),
+                rgb(17 24 39 / 0.95),
+                rgb(17 24 39 / 0.9),
+                rgb(17 24 39 / 0.85),
+                transparent
+            );
+        }
+    </style>
+    <div class="z-10 gradient-70">
+        <p class="text-primary capitalize uppercase text-xl tracking-wider">
+            I'm astronaut
+        </p>
+        <!-- hero title -->
+        <ColorSwitcherTitle
+            client:load
+            title="A Web Engineer"
+            tailwindStyle={{title: 'text-[2.5rem] mb-[1rem]'}}
+        />
+        <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
+            I write sweat code for the web,
+        </p>
+        <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
+            With the help of sweat technologies.
+        </p>
+        <ul aria-label="socialMedia" class="mt-3">
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+        <div class="flex gap-7 mt-8">
+            <button class={`text-primary capitalize border-primary border-b-2 py-[5px]`}>
+                <a href="#contact">Get in Touch</a>
+            </button>
+            <button class={`text-primary capitalize border-primary border-b-2 py-[5px]`}>
+                <a href="/media/projects/snipshare.jpeg" download="astronaut_resume.pdf"
+                    >Download resume</a
+                >
+            </button>
+        </div>
     </div>
-  </div>
-  <style>
-    .astro{
-      right: calc(min(10%, 100px)) /* this doesn't work in tailwind */
-    }
-  </style>
-  <div class="w-[190px] absolute astro">
-    <Icon class='text-primary/50 w-2xl' name='fa-solid:user-astronaut'/>
-    <!-- <Icon class='absolute z-20 w-2xl' name='mdi:fire-circle'/> -->
-    <!-- <Icon class='absolute top-[-120px] left-[-30px] w-[20rem] text-primary' name='mdi:fire'/> -->
-  </div>
+    <style>
+        .astro {
+            right: min(8%, 100px); /* this doesn't work in tailwind */
+        }
+        @media width < 500px {
+            .astro {
+                right: 1rem; /* this doesn't work in tailwind */
+            }
+        }
+    </style>
+    <div class="w-[190px] absolute astro">
+        <Icon class="text-primary/50 w-2xl" name="fa-solid:user-astronaut" />
+        <!-- <Icon class='absolute z-20 w-2xl' name='mdi:fire-circle'/> -->
+        <!-- <Icon class='absolute top-[-120px] left-[-30px] w-[20rem] text-primary' name='mdi:fire'/> -->
+    </div>
 </section>
