--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -42,7 +42,7 @@ const projectItems: projectItemsT = [
 ];
 ---
 
-<section id="portfolio" aria-label="projects" class="text-slate-50 pt-[6rem] px-main">
+<section id="portfolio" aria-label="projects" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl relative
               before:absolute
