--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -1,4 +1,11 @@
-<section id='contact' class="text-slate-50 pt-[6rem] px-main xs>:px-4">
+---
+import Icon from 'astro-icon'
+const classes = {
+    input: `border-l-2 border-l-primary px-2 py-1 bg-gray-400/10 block w-full mb-4`,
+};
+---
+
+<section id="contact" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl pb-[3rem] relative
                     before:absolute
@@ -7,7 +14,26 @@
     >
         Get <span class="text-primary">In Touch</span>
     </h2>
-    <form action="">
-        
+    <form class="mx-auto max-w-[400px]">
+        <input
+            aria-label="your name"
+            type="text"
+            name="name"
+            class={classes.input}
+            placeholder="Name"
+        />
+        <input
+            aria-label="your email"
+            type="email"
+            name="email"
+            class={classes.input}
+            placeholder="Message"
+        />
+        <textarea
+            aria-label="your message"
+            name="message"
+            rows="4"
+            class={classes.input}
+            placeholder="Message"></textarea>
     </form>
 </section>
