feat: added social media links/icons to the hero and contact sections, resolves #8

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -36,4 +36,23 @@ const classes = {
             class={classes.input}
             placeholder="Message"></textarea>
     </form>
+
+    <h3 class="capitalize mx-auto w-max mt-10 text-xl">other methods</h3>
+    <ul aria-label="socialMedia" class="flex gap-3 mt-5 text-primary mx-auto w-max">
+        <li>
+            <a href="https:twitter.com" target="_blank"
+                ><Icon name="ph:twitter-logo-bold" class="h-10 w-8" />
+            </a>
+        </li>
+        <li>
+            <a href="https:linkedin.com" target="_blank"
+                ><Icon name="ri:linkedin-line" class="h-10 w-8" />
+            </a>
+        </li>
+        <li>
+            <a href="https:github.com" target="_blank"
+                ><Icon name="ri:github-line" class="h-10 w-8" />
+            </a>
+        </li>
+    </ul>
 </section>
